--- a/styles/css/vtex.minicart.css
+++ b/styles/css/vtex.minicart.css
@@ -41,9 +41,6 @@
   .openIconContainer {
     margin: 0;
   }
-  .minicartContainer :global(.vtex-button) {
-    margin: 0 11px;
-  }
 }
 .minicartCheckoutButton {
   padding-bottom: 75px;
