--- a/styles/css/vtex.store-header.css
+++ b/styles/css/vtex.store-header.css
@@ -49,14 +49,12 @@
   }
 }
 
-:global(.vtex-store-drawer-0-x-openIconContainer--header-drawer) {
-  padding-top: 20px;
-}
-
 :global(.vtex-flex-layout-0-x-flexRowContent--header-actions) {
   display: flex;
   column-gap: 2.3rem;
   height: 100%;
+  align-items: center;
+  justify-content: space-around;
 }
 
 :global(.vtex-flex-layout-0-x-flexCol--header-content)
@@ -189,13 +187,32 @@
 }
 
 /* SEARCH BAR */
+:global(.vtex-search-2-x-biggy-autocomplete-wrapper) {
+  width: 70vw;
+}
+
 :global(.vtex-search-2-x-biggy-autocomplete) {
-  max-width: 1000px;
-  right: 50vw;
+  max-width: 100%;
+  right: 60vw;
   top: -50px;
   border: 2px solid #e7e9ee;
   box-shadow: 0px 8px 32px rgb(0 0 0 / 3%);
   border-radius: 8px;
+}
+
+@media only screen and (min-width: 1400px) {
+  :global(.vtex-search-2-x-biggy-autocomplete-wrapper) {
+    width: 60vw;
+  }
+}
+
+@media only screen and (min-width: 2600px) {
+  :global(.vtex-search-2-x-biggy-autocomplete-wrapper) {
+    width: 40vw;
+  }
+  :global(.vtex-search-2-x-biggy-autocomplete) {
+    right: 55vw;
+  }
 }
 
 :global(.vtex-search-2-x-biggy-autocomplete) :global(.vtex-search-2-x-itemList--suggestion) {
